    public enum TeleportationTrigger { Quiz, Door, Automation };